# vim: set ft=toml :


[project]
name = 'round-robin-scheduler'


[tool.pixi.workspace]
channels = ['conda-forge']
platforms = [
  'linux-64',
  'linux-aarch64',
  'osx-64',
  'osx-arm64',
]

[tool.pixi.dependencies]
python = { version = '>=3.14.3,<3.15' }

[tool.pixi.pypi-dependencies]
networkx = { version = '>=3.6.1' }
orjson = { version = '>=3.11.7' }
ortools = { version = '>=9.15.6755' }
rich = { version = '>=14.3.2' }  # weak dependency of structlog
structlog = { version = '>=25.5.0' }

[tool.pixi.environments]
default = { solve-group = 'default' }
lint = { features = ['lint'], solve-group = 'default' }

[tool.pixi.feature.lint.dependencies]
prek = { version = '>=0.3.2' }
ruff = { version = '>=0.15.1' }

[tool.pixi.feature.lint.tasks]
lint = { depends-on = ['prek-run'] }
# https://github.com/prefix-dev/pixi/discussions/1897
prek-install = { cmd = ['prek', 'install', '-f'] }
prek-run = { cmd = ['prek', 'run', '--all-files'] }


[tool.ruff]
line-length = 100
target-version = 'py314'

[tool.ruff.format]
preview = true

[tool.ruff.lint]
future-annotations = true
ignore = [
  'ANN',      # mypy handles our type annotations
  'COM812',   # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'COM819',   # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'CPY',      # not publishing publicly
  'D1',       # docstrings are optional
  'E111',     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'E114',     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'E117',     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'ERA',      # do not remove commented-out code
  'ISC001',   # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'ISC002',   # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'N806',
  'PLR0913',
  'PLR2004',
  'Q000',     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'Q001',     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'Q002',     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'Q003',     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'W191',     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
]
select = ['ALL']

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = []
known-local-folder = [
  'model',
  'structlog_config',
  'structlog_processors',
]
known-third-party = [
  'networkx',
  'orjson',
  'ortools',
  'structlog',
]

[tool.ruff.lint.pydocstyle]
convention = 'pep257'
